--- a/manager/package.json
+++ b/manager/package.json
@@ -1,35 +1,17 @@
 {
-  "name": "extream-collab-serverless",
-  "description": "Node.js Extream Collaboration Event Driven API",
-  "version": "0.0.1",
-  "private": true,
-  "license": "Apache Version 2.0",
-  "author": "SMG Design (UK) Ltd",
-  "engines": {
-    "node": ">=12.0.0"
-  },
+  "name": "excollab-manager",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "mocha test/*.test.js --timeout=30000 --exit"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@google-cloud/compute": "^2.0.3",
-    "@google-cloud/dns": "^2.0.2",
-    "@google-cloud/pubsub": "^2.0.0",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "google-auth-library": "^6.0.0",
-    "path": "^0.12.7",
-    "pug": "^3.0.0",
-    "wait-port": "^0.2.7"
-  },
-  "devDependencies": {
-    "jsonwebtoken": "^8.5.1",
-    "chai": "^4.2.0",
-    "mocha": "^8.0.0",
-    "sinon": "^9.0.0",
-    "uuid": "^8.0.0",
-    "supertest": "^4.0.2",
-    "proxyquire": "^2.1.3"
+    "@google-cloud/firestore": "^4.2.0",
+    "@google-cloud/pubsub": "^2.5.0",
+    "firebase-admin": "^9.1.1"
   }
 }
