--- a/component/package.json
+++ b/component/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^3.6.95",
     "axios": "0.19.2",
     "core-js": "3.6.5",
     "openvidu-browser": "2.15.0",
-    "vue": "2.6.11"
+    "roboto-fontface": "*",
+    "vee-validate": "^3.4.5",
+    "vue": "2.6.11",
+    "vue-router": "^3.4.9",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.6",
@@ -20,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
+    "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "2.6.11"
   },
   "eslintConfig": {
