--- a/component/package.json
+++ b/component/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "@sublime-productions/vue-components": "^0.8.0",
     "axios": "0.19.2",
     "core-js": "3.6.5",
     "openvidu-browser": "2.15.0",
