--- a/.github/workflows/excollab-component.yml
+++ b/.github/workflows/excollab-component.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  buildComponent:
+  build:
     name: Build and deploy documentation
     runs-on: ubuntu-latest
     defaults:
