--- a/.github/workflows/excollab-manager.yml
+++ b/.github/workflows/excollab-manager.yml
@@ -5,13 +5,9 @@ on:
     paths:
       - 'manager/*'
     branches: [ master ]
-  pull_request:
-    paths:
-      - 'manager/*'
-    branches: [ master ]
 
 jobs:
-  buildManageCollab:
+  build:
     name: Build manage-collab
     runs-on: ubuntu-latest
 
@@ -27,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         id: Build
-        uses: actions/setup-node@v1.4.3
+        uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
@@ -45,15 +41,15 @@ jobs:
         if: always()
 
 
-  deployManageCollab:
+  deploy:
     name: Deploy manage-collab - Cloud Function
     runs-on: ubuntu-latest
-    needs: [buildManageCollab]
+    needs: [build]
     steps:
       - uses: actions/checkout@v2
       - name: Deploy to GCP
         id: Deploy
-        uses: actions-hub/gcloud@307.0.0
+        uses: actions-hub/gcloud@318.0.0
         env:
           PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
           APPLICATION_CREDENTIALS: ${{secrets.GCLOUD_CREDENTIALS}}
