--- a/component/package.json
+++ b/component/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
-    "@sublime-productions/vue-components": "^0.8.0",
+    "@sublime-productions/extream-sdk": "^0.5.13",
     "axios": "0.19.2",
     "core-js": "3.6.5",
     "openvidu-browser": "2.15.0",
     "roboto-fontface": "*",
+    "socket.io-client": "2.3.0",
     "vee-validate": "^3.4.5",
     "vue": "2.6.11",
     "vue-router": "^3.4.9",
