--- a/.github/workflows/dev-excollab-mediaserver.yml
+++ b/.github/workflows/dev-excollab-mediaserver.yml
@@ -17,6 +17,16 @@ jobs:
 
     steps:
       -
+        name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            extreamio/excollab-mediaserver
+          # add git short SHA as Docker tag
+          tag-sha: true
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
@@ -34,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: extreamio/excollab-mediaserver:dev-${{ GITHUB_SHA }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
 
       - uses: act10ns/slack@v1
         env:
