--- a/.github/workflows/dev-excollab-mediaserver.yml
+++ b/.github/workflows/dev-excollab-mediaserver.yml
@@ -42,6 +42,7 @@ jobs:
         id: docker_build_dist
         uses: docker/build-push-action@v2
         with:
+          context: ./server
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
