--- a/.github/workflows/dev-excollab-mediaserver.yml
+++ b/.github/workflows/dev-excollab-mediaserver.yml
@@ -2,8 +2,8 @@ name: dev-excollab-mediaserver
 
 on:
   push:
-    paths:
-      - 'server/*'
+    # paths:
+    #   - 'server/*'
     branches: [ dev ]
 
 jobs:
@@ -42,7 +42,7 @@ jobs:
         id: docker_build_dist
         uses: docker/build-push-action@v2
         with:
-          context: ./server
+          context: .
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
