--- a/.github/workflows/dev-excollab-mediaserver.yml
+++ b/.github/workflows/dev-excollab-mediaserver.yml
@@ -15,6 +15,7 @@ jobs:
       run:
         working-directory: server
     steps:
+      - uses: actions/checkout@v2
       -
         name: Docker meta
         id: docker_meta
@@ -42,7 +43,7 @@ jobs:
         id: docker_build_dist
         uses: docker/build-push-action@v2
         with:
-          context: server
+          context: .
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
