--- a/.github/workflows/dev-excollab-mediaserver.yml
+++ b/.github/workflows/dev-excollab-mediaserver.yml
@@ -48,7 +48,7 @@ jobs:
         id: docker_build_dist
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: server
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
