--- a/.github/workflows/dev-excollab-mediaserver.yml
+++ b/.github/workflows/dev-excollab-mediaserver.yml
@@ -43,6 +43,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        # Ignore the failure of a step and avoid terminating the job.
+        continue-on-error: true
       -
         name: Build and push
         id: docker_build_dist
