enabled google cloudbuild for mediaserver core

--- a/.github/workflows/dev-excollab-mediaserver.yml
+++ b/.github/workflows/dev-excollab-mediaserver.yml
@@ -2,9 +2,9 @@ name: dev-excollab-mediaserver
 
 on:
   push:
-    # paths:
-    #   - 'server/*'
-    branches: [ dev ]
+    paths:
+      - 'server/*'
+    branches: [ dev_1 ]
 
 jobs:
   build:
