--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -6,5 +6,23 @@ steps:
     - '-c'
     - |
       export DOCKER_BUILDKIT=1 && \
+      docker PULL gcr.io/stoked-reality-284921/excollab-mediaserver:latest && \
       docker build -f server/Dockerfile -t gcr.io/stoked-reality-284921/excollab-mediaserver:latest --build-arg BUILDKIT_INLINE_CACHE=1 server && \
       docker push gcr.io/stoked-reality-284921/excollab-mediaserver:latest
+- name: 'docker'
+  id: 'Extract assets'
+  entrypoint: 'sh'
+  args:
+    - '-c'
+    - |
+      docker cp gcr.io/stoked-reality-284921/excollab-mediaserver:latest:/home/opt ./server/dist && \
+      tar -zcvf ./dist/$SHORT_SHA.tar.gz ./dist/owt 
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Extract assets'
+  entrypoint: 'gcloud'
+  args:
+    - |
+      compute scp ./dist/$SHORT_SHA.tar.gz dev-excollab-mediaserver:/home/owt/releases && \
+      compute ssh dev-excollab-mediaserver --command tar -zxvf /home/owt/releases/$SHORT_SHA.tar.gz ./ && rm /opt/owt && ln -s /home/owt/releases/$SHORT_SHA /opt/owt && \
+      compute ssh dev-excollab-mediaserver --command rm -rf /opt/owt/management_api/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/management_api/cert && rm -rf /opt/owt/management_console/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/management_console/cert && rm -rf /opt/owt/webrtc_agent/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/webrtc_agent/cert && rm -rf /opt/owt/portal/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/portal/cert && \
+      compute ssh dev-excollab-mediaserver --command /opt/owt/bin/init-all.sh --deps && /opt/owt/bin/start-all.sh
