removed pull for now

--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     - '-c'
     - |
       export DOCKER_BUILDKIT=1 && \
-      docker PULL gcr.io/stoked-reality-284921/excollab-mediaserver:latest && \
+      # docker pull gcr.io/stoked-reality-284921/excollab-mediaserver:latest && \
       docker build -f server/Dockerfile -t gcr.io/stoked-reality-284921/excollab-mediaserver:latest --build-arg BUILDKIT_INLINE_CACHE=1 server && \
       docker push gcr.io/stoked-reality-284921/excollab-mediaserver:latest
 - name: 'docker'
