--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -1,14 +1,20 @@
 steps:
-- name: 'docker'
-  id: 'Build and Push'
-  entrypoint: 'sh'
+- name: 'gcr.io/kaniko-project/executor:latest'
   args:
-    - '-c'
-    - |
-      export DOCKER_BUILDKIT=1 && \
-      # docker pull gcr.io/stoked-reality-284921/excollab-mediaserver:latest && \
-      docker build -f server/Dockerfile -t gcr.io/stoked-reality-284921/excollab-mediaserver:latest --build-arg BUILDKIT_INLINE_CACHE=1 server && \
-      docker push gcr.io/stoked-reality-284921/excollab-mediaserver:latest
+  - --destination=gcr.io/stoked-reality-284921/excollab-mediaserver:latest
+  - --cache=true
+  - --cache-ttl=14400h
+  - --context=server
+# - name: 'docker'
+#   id: 'Build and Push'
+#   entrypoint: 'sh'
+#   args:
+#     - '-c'
+#     - |
+#       export DOCKER_BUILDKIT=1 && \
+#       docker pull gcr.io/stoked-reality-284921/excollab-mediaserver:latest && \
+#       docker build -f server/Dockerfile -t gcr.io/stoked-reality-284921/excollab-mediaserver:latest --build-arg BUILDKIT_INLINE_CACHE=1 server && \
+#       docker push gcr.io/stoked-reality-284921/excollab-mediaserver:latest
 - name: 'docker'
   id: 'Tarball assets'
   entrypoint: 'sh'
@@ -27,3 +33,9 @@ steps:
       compute ssh dev-excollab-mediaserver --command rm -rf /opt/owt/management_api/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/management_api/cert && rm -rf /opt/owt/management_console/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/management_console/cert && rm -rf /opt/owt/webrtc_agent/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/webrtc_agent/cert && rm -rf /opt/owt/portal/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/portal/cert && \
       compute ssh dev-excollab-mediaserver --command /opt/owt/bin/init-all.sh --deps && /opt/owt/bin/start-all.sh
 timeout: 7200s
+options:
+  machineType: 'N1_HIGHCPU_8'
+artifacts:
+  objects:
+    location: gs://ex-cb-artifacts/excollab/server
+    paths: [./dist/$SHORT_SHA.tar.gz]
