increased to 32cpu commands split out and sudo added

--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -29,12 +29,14 @@ steps:
   args:
     - |
       compute scp ./dist/$SHORT_SHA.tar.gz dev-excollab-mediaserver:/home/owt/releases && \
-      compute ssh dev-excollab-mediaserver --command tar -zxvf /home/owt/releases/$SHORT_SHA.tar.gz ./ && rm /opt/owt && ln -s /home/owt/releases/$SHORT_SHA /opt/owt && \
-      compute ssh dev-excollab-mediaserver --command rm -rf /opt/owt/management_api/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/management_api/cert && rm -rf /opt/owt/management_console/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/management_console/cert && rm -rf /opt/owt/webrtc_agent/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/webrtc_agent/cert && rm -rf /opt/owt/portal/cert/certificate.pfx && cp /opt/owt-cert/certificate.pfx /opt/owt/portal/cert && \
-      compute ssh dev-excollab-mediaserver --command /opt/owt/bin/init-all.sh --deps && /opt/owt/bin/start-all.sh
+      compute ssh dev-excollab-mediaserver --command "sudo tar -zxvf /home/owt/releases/$SHORT_SHA.tar.gz ./ && sudo rm /opt/owt && sudo ln -s /home/owt/releases/$SHORT_SHA/ /opt/owt" && \
+      compute ssh dev-excollab-mediaserver --command "sudo rm -rf /opt/owt/management_api/cert/certificate.pfx && sudo cp /opt/owt-cert/certificate.pfx /opt/owt/management_api/cert && sudo rm -rf /opt/owt/management_console/cert/certificate.pfx && sudo cp /opt/owt-cert/certificate.pfx /opt/owt/management_console/cert && sudo rm -rf /opt/owt/webrtc_agent/cert/certificate.pfx && sudo cp /opt/owt-cert/certificate.pfx /opt/owt/webrtc_agent/cert && sudo rm -rf /opt/owt/portal/cert/certificate.pfx && sudo cp /opt/owt-cert/certificate.pfx /opt/owt/portal/cert" && \
+      # NOT NEEDED UNLESS A NEW INSTANCE
+      compute ssh dev-excollab-mediaserver --command "sudo /opt/owt/bin/init-all.sh --deps"
+      compute ssh dev-excollab-mediaserver --command "sudo /opt/owt/bin/start-all.sh"
 timeout: 7200s
 options:
-  machineType: 'E2_HIGHCPU_8'
+  machineType: 'E2_HIGHCPU_32'
 artifacts:
   objects:
     location: gs://ex-cb-artifacts/excollab/server
